--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - cd ./public
       - npm install
       - npm run build
+      - aws s3 rm s3://pdftest-20200803 --recursive
 artifacts:
   base-directory: ./build
   files:
