--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - cd ./public
-      - npm install
+      - npm
       - npm run build
       - aws s3 rm s3://pdftest-20200803 --recursive
 artifacts:
